--- a/index.html
+++ b/index.html
@@ -19,6 +19,34 @@
 
 
 
+<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">
+			<img src="images/Logo-Design.png" alt="" width="80">
+		</a>
+		<button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse navbar-dark" id="navbarText">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link" aria-current="page" href="#">SHOP</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">VÆRKSTED</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">OM OS</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">KONTAKT</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
