Oprettet baggrundsbillede og intro tekst + ændret Bootstrap farver

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <body>
 
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">
@@ -45,6 +44,19 @@
 		</div>
 	</div>
 </nav>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="images/Sweets_Candy_Chocolate_Black_background_521530_1920x1080.jpg" class="d-block w-100" alt="...">
+		</div>
+	</div>
+</div>
+
+<section class="TekstForside">
+	<h1>Hvem er vi?</h1>
+	<p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være! Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod, chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
+</section>
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
