--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 	<p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være! Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod, chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
 </section>
 
+<div class="card-group py-4">
+	<div class="card  border-0 position-relative">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+	</div>
+	<div class="card border-0 position-relative">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+	</div>
+	<div class="card border-0 position-relative">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+	</div>
+</div>
+
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
