--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 	</div>
 </nav>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="images/Sweets_Candy_Chocolate_Black_background_521530_1920x1080.jpg" class="d-block w-100" alt="...">
-		</div>
+<div class="header-image">
+	<div class="card  border-0 position-relative">
+		<img src="images/download.jpg" class="header-img-top" alt="header-image">
 	</div>
 </div>
 
@@ -58,15 +56,102 @@
 	<p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være! Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod, chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
 </section>
 
-<div class="card-group py-4">
-	<div class="card  border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+<div class="card-group py-3 px-3">
+	<div class="card border-0 position-relative">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
 	</div>
 	<div class="card border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
 	</div>
 	<div class="card border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="espressohouse-app">
+		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+	</div>
+</div>
+
+<div class="container gx-3">
+	<div class="row forside-omos">
+		<div class="col-4">
+			<img src="images/download.jpg" class="person1" alt="person">
+		</div>
+		<div class="col-8">'
+			<h1>Thomas Trads</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+		</div>
+	</div>
+
+	<div class="row forside-omos">
+		<div class="col-8">
+			<h1>Thomas Trads</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+		</div>
+		<div class="col-4">
+			<img src="images/download.jpg" class="person1" alt="person">
+		</div>
+	</div>
+
+	<div class="row forside-omos">
+		<div class="col-4">
+			<img src="images/download.jpg" class="person1" alt="person">
+		</div>
+		<div class="col-8">
+			<h1>Thomas Trads</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+		</div>
+	</div>
+</div>
+
+<!-- FOOTER START -->
+<div class="footer">
+	<div class="contain">
+		<div class="col">
+			<h1>Virksomheden</h1>
+			<ul>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</div>
+		<div class="col">
+			<h1>Produkter</h1>
+			<ul>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</div>
+		<div class="col">
+			<h1>Om os</h1>
+			<ul>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</div>
+		<div class="col">
+			<h1>Ressourcer</h1>
+			<ul>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</div>
+		<div class="col social">
+			<h1>Social</h1>
+			<ul>
+				<li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
+				<li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
+				<li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+			</ul>
+		</div>
+		<div class="clearfix"></div>
 	</div>
 </div>
 
