Rettet header billede

--- a/index.html
+++ b/index.html
@@ -1,158 +1,164 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-	<meta charset="utf-8">
-	
-	<title>Sigende titel</title>
-	
-	<meta name="robots" content="All">
-	<meta name="author" content="Udgiver">
-	<meta name="copyright" content="Information om copyright">
-	
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-	<link href="css/styles.css" rel="stylesheet" type="text/css">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+
+    <title>Sigende titel</title>
+
+    <meta name="robots" content="All">
+    <meta name="author" content="Udgiver">
+    <meta name="copyright" content="Information om copyright">
+
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
-			<img src="images/Logo-Design.png" alt="" width="80">
-		</a>
-		<button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse navbar-dark" id="navbarText">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-					<a class="nav-link" aria-current="page" href="#">SHOP</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">VÆRKSTED</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">OM OS</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">KONTAKT</a>
-				</li>
-			</ul>
-		</div>
-	</div>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="images/Logo-Design.png" alt="" width="80">
+        </a>
+        <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> <!-- Udskift med font awesome ikon -->
+        </button>
+        <div class="collapse navbar-collapse navbar-dark" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">VÆRKSTED</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">OM OS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">KONTAKT</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
-<div class="header-image">
-	<div class="card  border-0 position-relative">
-		<img src="images/download.jpg" class="header-img-top" alt="header-image">
-	</div>
+<div class="hero-image">
+    <div class="hero-text">
+        <h1 style="font-size:50px">I am John Doe</h1>
+        <p>And I'm a Photographer</p>
+        <button>Hire me</button>
+    </div>
 </div>
 
 <section class="TekstForside">
-	<h1>Hvem er vi?</h1>
-	<p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være! Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod, chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
+    <h1>Hvem er vi?</h1>
+    <p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
+        tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være!
+        Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske
+        mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod,
+        chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
 </section>
 
-<div class="card-group py-3 px-3">
-	<div class="card border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-	</div>
-	<div class="card border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-	</div>
-	<div class="card border-0 position-relative">
-		<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+<div class="card-group px-3">
+	<div class="row g-3">
+		<div class="col-sm-4 col-12">
+			<div class="card border-0 position-relative ">
+				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+			</div>
+		</div>
+		<div class="col-sm-4 col-12">
+			<div class="card border-0 position-relative ">
+				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+			</div>
+		</div>
+		<div class="col-sm-4 col-12">
+			<div class="card border-0 position-relative ">
+				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+			</div>
+		</div>
 	</div>
 </div>
 
 <div class="container gx-3">
-	<div class="row forside-omos">
-		<div class="col-4">
-			<img src="images/download.jpg" class="person1" alt="person">
-		</div>
-		<div class="col-8">'
-			<h1>Thomas Trads</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
-		</div>
-	</div>
+    <div class="row forside-omos py-3">
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+    </div>
 
-	<div class="row forside-omos">
-		<div class="col-8">
-			<h1>Thomas Trads</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
-		</div>
-		<div class="col-4">
-			<img src="images/download.jpg" class="person1" alt="person">
-		</div>
-	</div>
+    <div class="row forside-omos py-3">
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+    </div>
 
-	<div class="row forside-omos">
-		<div class="col-4">
-			<img src="images/download.jpg" class="person1" alt="person">
-		</div>
-		<div class="col-8">
-			<h1>Thomas Trads</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
-		</div>
-	</div>
+    <div class="row forside-omos py-3">
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+    </div>
 </div>
 
 <!-- FOOTER START -->
 <div class="footer">
-	<div class="contain">
-		<div class="col">
-			<h1>Virksomheden</h1>
-			<ul>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-			</ul>
-		</div>
-		<div class="col">
-			<h1>Produkter</h1>
-			<ul>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-			</ul>
-		</div>
-		<div class="col">
-			<h1>Om os</h1>
-			<ul>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-			</ul>
-		</div>
-		<div class="col">
-			<h1>Ressourcer</h1>
-			<ul>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-				<li>Lorem ipsum.</li>
-			</ul>
-		</div>
-		<div class="col social">
-			<h1>Social</h1>
-			<ul>
-				<li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-				<li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
-				<li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
-			</ul>
-		</div>
-		<div class="clearfix"></div>
-	</div>
+    <div class="container justify-content-center">
+        <div class="row">
+            <div class="col">
+                <h1>Virksomheden</h1>
+                <ul>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h1>Om os</h1>
+                <ul>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h1>Ressourcer</h1>
+                <ul>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h1>Social</h1>
+                <ul>
+                    <li><img src="#" width="32" style="width: 32px;"></li>
+                    <li><img src="#" width="32" style="width: 32px;"></li>
+                    <li><img src="#" width="32" style="width: 32px;"></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 
