Rettet media queries og breakpoints

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 
 <div class="hero-image">
     <div class="hero-text">
-        <h1 style="font-size:50px">I am John Doe</h1>
-        <p>And I'm a Photographer</p>
+        <h1 style="font-size:40px">Chokolade til enhver smag</h1>
+		<br>
         <button>Hire me</button>
     </div>
 </div>
 
 <section class="TekstForside">
-    <h1>Hvem er vi?</h1>
-    <p class="TekstForside-paragraph">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
+    <h1 class="">Hvem er vi?</h1>
+    <p class="TekstForside-paragraph px-lg-5">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
         tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være!
         Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske
         mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod,
