--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Sigende titel</title>
+    <title>Chocolate Club</title>
 
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
@@ -13,6 +13,10 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font Awesome ikoner -->
+    <script src="https://kit.fontawesome.com/b5fb28feeb.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -114,53 +118,40 @@
     </div>
 </div>
 
+
 <!-- FOOTER START -->
-<div class="footer">
-    <div class="container justify-content-center">
-        <div class="row">
-            <div class="col">
-                <h1>Virksomheden</h1>
-                <ul>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                </ul>
+<footer class="footer bg-mørkeBrun">
+    <div class="container footer-spacing justify-content-center text-center">
+        <div class="row footer-text g-0"> <!-- Uden g-0 kom der for meget plads i højre side -->
+            <div class="col-12 col-lg-6">
+                <p class="footer-link py-4">SHOP</p>
             </div>
-            <div class="col">
-                <h1>Om os</h1>
-                <ul>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                </ul>
+            <div class="col-12 col-lg-6">
+                <p class="footer-link py-4">OM OS</p>
             </div>
-            <div class="col">
-                <h1>Ressourcer</h1>
-                <ul>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                </ul>
+            <div class="col-12 col-lg-6">
+                <p class="footer-link py-4">KONTAKT</p>
             </div>
-            <div class="col">
-                <h1>Social</h1>
-                <ul>
-                    <li><img src="#" width="32" style="width: 32px;"></li>
-                    <li><img src="#" width="32" style="width: 32px;"></li>
-                    <li><img src="#" width="32" style="width: 32px;"></li>
-                </ul>
+            <div class="col-12 col-lg-6">
+                <p class="footer-link py-4">VÆRKSTED</p>
+            </div>
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+                <!-- Section: Social media -->
+                <section class="mb-4">
+                    <!-- Facebook -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i
+                            class="fab fa-facebook-f"></i></a>
+
+                    <!-- Instagram -->
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i
+                            class="fab fa-instagram"></i></a>
+                </section>
+                <!-- Section: Social media -->
             </div>
         </div>
     </div>
-</div>
-
-
+</footer>
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
