--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun">
+<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
     <div class="container-fluid position-relative">
         <a class="position-absolute logo-placering" href="#">
             <img src="images/Logo-Design.png" alt="" width="80">
