--- a/index.html
+++ b/index.html
@@ -154,6 +154,25 @@
 </footer>
 
 
+<footer class="footer-distributed">
+    <div class="footer-right">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+    </div>
+
+    <div class="footer-left">
+        <p class="footer-links">
+            <a class="link-1" href="#">HJEM</a>
+            <a href="#">SHOP</a>
+            <a href="#">OM OS</a>
+            <a href="#">VÆRKSTED</a>
+            <a href="#">KONTAKT</a>
+        </p>
+        <p>Company Name &copy; 2015</p>
+    </div>
+</footer>
+
+
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
