--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
     </div>
-
     <div class="footer-left">
         <p class="footer-links">
             <a class="link-1" href="#">HJEM</a>
@@ -168,7 +167,7 @@
             <a href="#">VÆRKSTED</a>
             <a href="#">KONTAKT</a>
         </p>
-        <p>Company Name &copy; 2015</p>
+        <p>CHOCOLATE CLUB &copy; 2022</p>
     </div>
 </footer>
 
