Oprettet undersider og testet forskellige typer af "checkouts"

--- a/Checkout.html
+++ b/Checkout.html
@@ -52,40 +52,55 @@
 <div class="hero-image">
     <div class="hero-text">
         <h1 style="font-size:40px">Chokolade til enhver smag</h1>
-		<br>
+        <br>
         <button>Læs mere</button>
     </div>
 </div>
 
-<section class="TekstForside">
-    <h1 class="">Hvem er vi?</h1>
-    <p class="TekstForside-paragraph px-lg-5">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
-        tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være!
-        Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske
-        mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod,
-        chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
-</section>
-
-<div class="card-group px-3">
-	<div class="row g-3">
-		<div class="col-sm-4 col-md-12 col-lg-4">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-		<div class="col-sm-4 col-md-6 col-lg-4">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-	</div>
+<div class="row">
+    <div class="col-md-4 order-md-2 mb-4">
+        <h4 class="d-flex align-items-center my-3 justify-content-center">
+            <span>DIN KURV</span>
+        </h4>
+        <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                    <h6 class="my-0">Produkt</h6>
+                    <small>Beskrivelse</small>
+                </div>
+                <span>$12</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                    <h6 class="my-0">Produkt</h6>
+                    <small>Beskrivelse</small>
+                </div>
+                <span>$8</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                    <h6 class="my-0">Produkt</h6>
+                    <small>Beskrivelse</small>
+                </div>
+                <span>$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between bg-light">
+                <div class="text-success">
+                    <h6 class="my-0">Promo code</h6>
+                    <small>EXAMPLECODE</small>
+                </div>
+                <span class="text-success">-$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+                <span>Total (USD)</span>
+                <strong>$20</strong>
+            </li>
+        </ul>
+            <hr class="mb-4">
+            <button class="btn btn-primary btn-lg btn-block justify-content-center" type="submit">Continue to checkout</button>
+        </form>
+    </div>
 </div>
-
 
 <footer class="footer-distributed">
     <div class="footer-right">
@@ -106,5 +121,7 @@
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 </html>
