--- a/OmOs.html
+++ b/OmOs.html
@@ -52,40 +52,43 @@
 <div class="hero-image">
     <div class="hero-text">
         <h1 style="font-size:40px">Chokolade til enhver smag</h1>
-		<br>
+        <br>
         <button>Læs mere</button>
     </div>
 </div>
 
-<section class="TekstForside">
-    <h1 class="">Hvem er vi?</h1>
-    <p class="TekstForside-paragraph px-lg-5">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
-        tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være!
-        Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske
-        mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod,
-        chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
-</section>
 
-<div class="card-group px-3">
-	<div class="row g-3">
-		<div class="col-sm-4 col-md-12 col-lg-4">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-		<div class="col-sm-4 col-md-6 col-lg-4">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
-			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
-			</div>
-		</div>
-	</div>
+<div class="container gx-3">
+    <div class="row forside-omos py-3">
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+    </div>
+
+    <div class="row forside-omos py-3">
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+    </div>
+
+    <div class="row forside-omos py-3">
+        <div class="col-4" style="border: 1px solid red">
+            <img src="images/download.jpg" class="person1" alt="person">
+        </div>
+        <div class="col-8" style="border: 1px solid red">
+            <h1>Thomas Trads</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        </div>
+    </div>
 </div>
-
 
 <footer class="footer-distributed">
     <div class="footer-right">
@@ -106,5 +109,6 @@
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
