Rettelser med divs der overlapper

--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
         <div class="collapse navbar-collapse navbar-dark" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item text-end">
-                    <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                    <a class="nav-link" aria-current="page" href="#">PRODUKTER</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="OmOs.html">OM OS</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="#">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end">
-                    <a class="nav-link" href="Checkout.html">CHECKOUT</a>
                 </li>
             </ul>
         </div>
@@ -57,30 +54,26 @@
     </div>
 </div>
 
-<section class="TekstForside">
-    <h1 class="">Hvem er vi?</h1>
-    <p class="TekstForside-paragraph px-lg-5">Smagsoplevelsen har absolut topprioritet hos Gilleleje-Isen. Og alt er udviklet og
-        tilsmagt med kærlighed af vores fantastiske is-kok. For isen skal smage af dét, den udgiver sig for at være!
-        Derfor er alle vores sorbeter baseret på rigtige frugter og bær, og ud over mælk og fløde fra det økologiske
-        mejeri Øllingegaard er det den ægte vanilje, de rigtige pistacie- og hasselnødder, den rene lakridsrod,
-        chokolade og så videre, der giver vores is den vidunderlige, autentiske smag.</p>
-</section>
+<div class="TekstForside">
+    <h1 class="Introtekst">Hvem er vi?</h1>
+    <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+</div>
 
 <div class="card-group px-3">
 	<div class="row g-3">
 		<div class="col-sm-4 col-md-12 col-lg-4">
 			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4">
 			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
 			<div class="card border-0 position-relative ">
-				<img src="images/overtrukken.jpg" class="card-img-top" alt="chokolade">
+				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
 			</div>
 		</div>
 	</div>
@@ -95,10 +88,9 @@
     <div class="footer-left">
         <p class="footer-links">
             <a class="link-1" href="#">HJEM</a>
-            <a href="#">SHOP</a>
             <a href="#">OM OS</a>
-            <a href="#">VÆRKSTED</a>
             <a href="#">KONTAKT</a>
+            <a href="#">SHOP</a>
         </p>
         <p>CHOCOLATE CLUB &copy; 2022</p>
     </div>
