--- a/index.html
+++ b/index.html
@@ -64,16 +64,19 @@
 		<div class="col-sm-4 col-md-12 col-lg-4">
 			<div class="card border-0 position-relative ">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                <span role="button" class="billede-knap">BØRNEVENLIGE</span>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4">
 			<div class="card border-0 position-relative ">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                <span role="button" class="billede-knap">EKLUSIVE</span>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
 			<div class="card border-0 position-relative ">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                <span role="button" class="billede-knap">FESTLIGE</span>
 			</div>
 		</div>
 	</div>
