--- a/OmOs.html
+++ b/OmOs.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Information om copyright">
 
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/Omos.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
     <div class="container-fluid position-relative">
         <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="80">
+            <img src="images/Logo-Design.png" alt="Logo" width="160">
         </a>
         <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,40 +50,35 @@
 </nav>
 
 <div class="hero-image">
-    <div class="hero-text">
-        <h1 style="font-size:40px">Chokolade til enhver smag</h1>
-        <br>
-        <button>Læs mere</button>
-    </div>
 </div>
 
 
-<div class="container gx-3">
+<div class="container-fluid px-5">
     <div class="row forside-omos py-3">
-        <div class="col-4" style="border: 1px solid red">
-            <img src="images/download.jpg" class="person1" alt="person">
+        <div class="col-12 col-lg-4" style="border: 1px solid red">
+            <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-8" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-8" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
-        <div class="col-4" style="border: 1px solid red">
-            <img src="images/download.jpg" class="person1" alt="person">
+        <div class="col-12 col-lg-4" style="border: 1px solid red">
+            <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-4" style="border: 1px solid red">
-            <img src="images/download.jpg" class="person1" alt="person">
+        <div class="col-12 col-lg-4" style="border: 1px solid red">
+            <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-8" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
