--- a/OmOs.html
+++ b/OmOs.html
@@ -65,11 +65,11 @@
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-8 omos-reorder1" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
-        <div class="col-12 col-lg-4" style="border: 1px solid red">
+        <div class="col-12 col-lg-4 omos-reorder2" style="border: 1px solid red">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
     </div>
