Rettet order på media queries

--- a/OmOs.html
+++ b/OmOs.html
@@ -33,16 +33,13 @@
         <div class="collapse navbar-collapse navbar-dark" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item text-end">
-                    <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                    <a class="nav-link" aria-current="page" href="#">PRODUKTER</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="OmOs.html">OM OS</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="#">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end">
-                    <a class="nav-link" href="Checkout.html">CHECKOUT</a>
                 </li>
             </ul>
         </div>
@@ -53,32 +50,32 @@
 </div>
 
 
-<div class="container-fluid px-5">
+<div class="container-fluid px-5 py-3">
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-4" style="border: 1px solid red">
+        <div class="col-12 col-lg-3" style="border: 1px solid red">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-12 col-lg-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-9" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-8 omos-reorder1" style="border: 1px solid red">
+        <div class="col-12 col-lg-9 omos-reorder1" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
-        <div class="col-12 col-lg-4 omos-reorder2" style="border: 1px solid red">
+        <div class="col-12 col-lg-3 omos-reorder2" style="border: 1px solid red">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-4" style="border: 1px solid red">
+        <div class="col-12 col-lg-3" style="border: 1px solid red">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-12 col-lg-8" style="border: 1px solid red">
+        <div class="col-12 col-lg-9" style="border: 1px solid red">
             <h1>Thomas Trads</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
