--- a/Checkout.html
+++ b/Checkout.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
     <div class="container-fluid position-relative">
         <a class="position-absolute logo-placering" href="index.html">
-            <img src="images/Logo-Design.png" alt="Logo" width="80">
+            <img src="images/Logo-Design.png" alt="Logo" width="160">
         </a>
         <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,13 @@
         <div class="collapse navbar-collapse navbar-dark" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item text-end">
-                    <a class="nav-link" aria-current="page" href="#">SHOP</a>
+                    <a class="nav-link" aria-current="page" href="#">PRODUKTER</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="OmOs.html">OM OS</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="#">KONTAKT</a>
-                </li>
-                <li class="nav-item text-end">
-                    <a class="nav-link" href="Checkout.html">CHECKOUT</a>
                 </li>
             </ul>
         </div>
